Fixed issue with readability on very large screens.

--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -53,10 +53,11 @@ $off-color: #E81D88;
     grid-template-columns: 1fr 1fr !important;
   }
   .home-content-main-pane {
-    padding-bottom: 2.5em !important;
+    padding-bottom: 10em !important;
     padding-right: 2em !important;
     margin-right: 2em !important;
   }
+
 }
 
 @media (max-width: 900px) {
